add validation of token length
(cherry picked from commit 19bda0a55ca5b6b19205ed0112c9cda926786c10)